*** [WFCORE-5411] Use a standard file for JVM properties, while keeping backwards compatibility.
Signed-off-by: James R. Perkins <jperkins@redhat.com>