@@ -24,13 +24,7 @@ setSecurityManagerDefault() {
   fi
 }
 
-setModularJdk() {
-  "$JAVA" --add-modules=java.se -version > /dev/null 2>&1 && MODULAR_JDK=true || MODULAR_JDK=false
-}
-
 setDefaultModularJvmOptions() {
-  setModularJdk
-  if [ "$MODULAR_JDK" = "true" ]; then
     DEFAULT_MODULAR_JVM_OPTIONS=`echo $* | $GREP "\-\-add\-modules"`
     if [ "x$DEFAULT_MODULAR_JVM_OPTIONS" = "x" ]; then
       # Set default modular jdk options
@@ -61,5 +55,4 @@ setDefaultModularJvmOptions() {
     else
       DEFAULT_MODULAR_JVM_OPTIONS=""
     fi
-  fi
 }
