@@ -262,9 +262,6 @@ if [ "$PRESERVE_JAVA_OPTS" != "true" ]; then
         fi
     fi
 
-    # Set flag if JVM is modular
-    setModularJdk
-
     if [ "$GC_LOG" = "true" ]; then
         # Enable rotating GC logs if the JVM supports it and GC logs are not already enabled
         mkdir -p $JBOSS_LOG_DIR
@@ -282,10 +279,8 @@ if [ "$PRESERVE_JAVA_OPTS" != "true" ]; then
             "$JAVA" -Xverbosegclog:"$JBOSS_LOG_DIR/gc.log" -version > /dev/null 2>&1 && OPEN_J9_JDK=true || OPEN_J9_JDK=false
             if [ "$OPEN_J9_JDK" = "true" ]; then
                 TMP_PARAM="-Xverbosegclog:\"$JBOSS_LOG_DIR/gc.log\""
-            elif [ "$MODULAR_JDK" = "true" ]; then
-                TMP_PARAM="-Xlog:gc*:file=\"$JBOSS_LOG_DIR/gc.log\":time,uptimemillis:filecount=5,filesize=3M"
             else
-                TMP_PARAM="-verbose:gc -Xloggc:\"$JBOSS_LOG_DIR/gc.log\" -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=3M -XX:-TraceClassUnloading"
+                TMP_PARAM="-Xlog:gc*:file=\"$JBOSS_LOG_DIR/gc.log\":time,uptimemillis:filecount=5,filesize=3M"
             fi
 
             eval "$JAVA" $JVM_OPTVERSION $TMP_PARAM -version >/dev/null 2>&1 && PREPEND_JAVA_OPTS="$PREPEND_JAVA_OPTS $TMP_PARAM"
@@ -293,10 +288,6 @@ if [ "$PRESERVE_JAVA_OPTS" != "true" ]; then
             rm -f "$JBOSS_LOG_DIR/gc.log" >/dev/null 2>&1
         fi
     fi
-
-    # Set default modular JVM options
-    setDefaultModularJvmOptions $JAVA_OPTS
-    JAVA_OPTS="$JAVA_OPTS $DEFAULT_MODULAR_JVM_OPTIONS"
 
     # Set default Security Manager configuration value
     setSecurityManagerDefault
